# recommedation-engine

./: .env  pyproject.toml
src/: main.py
src/core/: aws_utils.py  bedrock_client.py  bedrock_client_cognito.py  config.py
src/inference/: recommendation.py
src/local/: bedrock_client.py
