[tool.poetry]
name = "recommendation-engine"
version = "0.1.0"
description = "FastAPI objective recommendation service"
authors = ["Louis Cronin <louis.cronin@cyara.com>"]
readme = "README.md"

# Your code lives under src/
packages = [
  { include = "core", from = "src" },
  { include = "local", from = "src" },
  { include = "inference", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.128.0,<0.129.0"
uvicorn = { version = ">=0.32.0", extras = ["standard"] }
boto3 = ">=1.42.37,<2.0.0"
python-dotenv = "^1.0.1"
pydantic = "^2.7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
